<resources>
    <string name="app_name">Practica2_RadioButton</string>
    <string name="txt_valor1_String">Ingresa el primer valor.</string>
    <string name="txt_valor2_String">Ingresa el segundo valor.</string>
    <string name="rb_suma_String">SUMA</string>
    <string name="rb_resta_String">RESTA</string>
    <string name="rb_multi_String">MULTIPLICACIÓN</string>
    <string name="rb_division_String">DIVISIÓN</string>
    <string name="button">CALCULAR</string>
    <string name="tv_resultado">Resultado.</string>
</resources>
